<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scoresTextView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#03A9F4"
    android:backgroundTintMode="add"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="226dp"
        android:layout_height="219dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457"
        app:srcCompat="@drawable/dice" />

    <Button
        android:id="@+id/rollButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#03A9F4"
        android:text="@string/button_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.191" />

    <EditText
        android:id="@+id/userInputEditText"
        android:layout_width="259dp"
        android:layout_height="46dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/edit_text_hint"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/maxNumberEditText"
        android:layout_width="166dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/max_number_text"
        android:inputType="number"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/userInputEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <TextView
        android:id="@+id/attemptsTextView"
        android:layout_width="95dp"
        android:layout_height="28dp"
        android:text="@string/attempts_text"
        android:textAlignment="textEnd"
        android:textColor="#03A9F4"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/userInputEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <TextView
        android:id="@+id/attemptsNum"
        android:layout_width="58dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="#03A9F4"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attemptsTextView" />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#03A9F4"
        android:text="@string/restart_button_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toEndOf="@+id/rollButton"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.191" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="64dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:text="@string/scores_string"
        android:textColor="#03A9F4"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.647" />

    <TextView
        android:id="@+id/scores"
        android:layout_width="82dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:textColor="#03A9F4"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.773" />

</androidx.constraintlayout.widget.ConstraintLayout>